--- a/tutorials/O4a_GeV_excess_tutorial.ipynb
+++ b/tutorials/O4a_GeV_excess_tutorial.ipynb
@@ -31,7 +31,29 @@
     "\\end{equation}\n",
     "then the free parameters that give rise to $N_{\\rm MSP}$ can be excluded as being responsible for the observed GeV excess.\n",
     "\n",
-    "Thus, our constraints look like exclusion regions in the parameter 2 vs. parameter 1 space."
+    "Thus, our constraints look like exclusion regions in the parameter 2 vs. parameter 1 space.\n",
+    "\n",
+    "## Getting Started\n",
+    "\n",
+    "Before running this tutorial, ensure you have the `cw_constrain` package installed and properly set up. See the `README.md` for installation instructions.\n",
+    "\n",
+    "Or, run in google collab: [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/andrew-l-miller/cw_constrain/blob/main/tutorials/O4a_GeV_excess_tutorial.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import google.colab\n",
+    "    IN_COLAB = True\n",
+    "except ImportError:\n",
+    "    IN_COLAB = False\n",
+    "    \n",
+    "if IN_COLAB:\n",
+    "    !pip install cw-constrain\n"
    ]
   },
   {
