--- a/tutorials/O4a_light_pbh_tutorial.ipynb
+++ b/tutorials/O4a_light_pbh_tutorial.ipynb
@@ -13,7 +13,29 @@
    "source": [
     "This tutorial walks the user through computing constraints on the fraction of dark matter that planetary-mass PBHs could compose using upper limits for transient continuous wave searches in O4a data.\n",
     "\n",
-    "The user may input their own mass function or suppression factor and use the model-independent rate densities to calculate constraints on their own PBH models."
+    "The user may input their own mass function or suppression factor and use the model-independent rate densities to calculate constraints on their own PBH models.\n",
+    "\n",
+    "## Getting Started\n",
+    "\n",
+    "Before running this tutorial, ensure you have the `cw_constrain` package installed and properly set up. See the `README.md` for installation instructions.\n",
+    "\n",
+    "Or, run in google collab: [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/andrew-l-miller/cw_constrain/blob/main/tutorials/O4a_light_pbh_tutorial.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import google.colab\n",
+    "    IN_COLAB = True\n",
+    "except ImportError:\n",
+    "    IN_COLAB = False\n",
+    "    \n",
+    "if IN_COLAB:\n",
+    "    !pip install cw-constrain\n"
    ]
   },
   {
@@ -32,8 +54,6 @@
     "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "import cmasher as cmr\n",
-    "choice_cmap='magma'\n",
     "import matplotlib.ticker as mticker\n",
     "import os\n",
     "import sys\n",
